--- a/baker/baker.css
+++ b/baker/baker.css
@@ -8,10 +8,10 @@
 	background-size:cover;
 	position:relative;
 	background-attachment:fixed;
-	padding:0;
+	z-index:1;
 	
 }
-.firstsection::after{
+/*.firstsection::after{
 	content:"";
 	position:absolute;
 	background-color:rgba(13,20,26,0.6);
@@ -19,10 +19,12 @@
 	left:0;
 	bottom:0;
 	right:0;
-}
+}*/
 .header{
 	background-color:#084956 ;
 	height:10vh;
+	position:fixed;
+	top:0;
 	
 }
 .container{
@@ -51,10 +53,11 @@
 	letter-spacing:1px;
 }
 .nav{
-	margin-left:350px;
-	width:700px;
+	margin-left:450px;
+	width:600px;
 	height:10vh;
 	z-index:1;
+	line-height:10px;
 }
 .nav ul{
 	list-style-type:none;
@@ -67,16 +70,23 @@
 	text-decoration:none;
 	line-height:8px;
 	color:white;
+	font-size:12px;
+	font-family:arial;
+}
+.nav a:hover{
+	color:orange;
+	transition:all ease 1s;
 }
 .main{
-	margin-top:100px;
+	margin-top:px;
 	height:200px;
 	text-align:center;
 	padding-top:10px;
 	font-weight:bold;
-	z-index:1;
+	z-index:1220;
 }
 .main h1{
+	margin-top:150px;
 	font-family:arial;
 	font-size:45px;
 	font-weight:bold;
@@ -87,8 +97,28 @@
 	font-family: sans-serif;
 	font-size:20px;
 	padding:10px;
-	color: #85929E ;
+	color: #34495E;
 	z-index:1;
+}
+.main button{
+	
+}
+.fbutton{
+	height:6vh;
+	width:150px;
+	font-weight:bold;
+	background-color:transparent;
+	letter-spacing:1px;
+	border-radius:20px;
+	margin-top:25px;
+	border:1.5px solid orange;
+	color:white;
+	z-index:1;
+}
+.fbutton:hover{
+	background-color:orange;
+	transition:all ease 1s;
+	
 }
 .fullfooter{
 	height:15vh;
@@ -96,43 +126,87 @@
 }
 .fffull{
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
+	text-align:center;
 }
 .ff1{
 	height:10vh;
 	width:100px;
 	margin-top:20px;
-	background-color: red;
+	background-color: #F8F9F9;
+	padding-top:10px;
+	filter: grayscale(100%);
+
+}
+.ff1:hover{
+	filter:none;
+	transition:all ease 0.9s;
+	width: 110px;
 }
 .ff2{
 	height:10vh;
 	width:100px;
 	margin-top:20px;
-	background-color: red;
+	background-color: #F8F9F9;
+	padding-top:10px;
+	filter: grayscale(100%);
+}
+.ff2:hover{
+	filter:none;
+	transition:all ease 0.9s;
+	width: 110px;
 }
 .ff3{
 	height:10vh;
 	width:100px;
 	margin-top:20px;
-	background-color: red;
+	background-color: #F8F9F9;
+	padding-top:10px;
+	filter: grayscale(100%);
+}
+.ff3:hover{
+	filter:none;
+	transition:all ease 0.9s;
+	width: 110px;
 }
 .ff4{
 	height:10vh;
 	width:100px;
 	margin-top:20px;
-	background-color: red;
+	background-color: #F8F9F9;
+	padding-top:10px;
+	filter: grayscale(100%);
+}
+.ff4:hover{
+	filter:none;
+	transition:all ease 0.9s;
+	width: 110px;
 }
 .ff5{
 	height:10vh;
 	width:100px;
 	margin-top:20px;
-	background-color: red;
+	background-color: #F8F9F9;
+	padding-top:10px;
+	filter: grayscale(100%);
+}
+.ff5:hover{
+	filter:none;
+	transition:all ease 0.9s;
+	width: 110px;
 }
 .ff6{
 	height:10vh;
 	width:100px;
 	margin-top:20px;
-	background-color: red;
+	background-color: #F8F9F9;
+	padding-top:10px;
+	filter: grayscale(100%);
+}
+.ff6:hover{
+	filter:none;
+	transition:all ease 0.9s;
+	width: 110px;
 }
 .secondsection{
 	background-color:white;
@@ -154,17 +228,26 @@
 .isfdiv{
 	padding:;
 	margin-left:50px;
-	background-color:red;
+	background-color:white;
 	width:600px;
 	
 }
 .vol{
 	height:20vh;
 	width:600px;
-	background-color:blue;
+	background-color:white;
 	margin-left:;
+}
+.vol h2{
+	font-family: sans-serif;
 	font-weight:bold;
-	font-size:40px;
+	font-size:35px;
+}
+.vol p{
+	padding-top:10px;
+	color: #707B7C ;
+	font-family:arial;
+	font-size:15px;
 }
 .isb{
 	display:flex;
@@ -172,83 +255,145 @@
 	height:30vh;
 	margin-top:30px;
 	width:600px;
-	margin-left:;
 
 }
 .corp{
-	height:20vh;
-	width:200px;
-	background-color:yellow;
-	margin-left:30px;
-	margin-top:40px;
+	height:25vh;
+	width:300px;
+	background-color:white;
+	margin-left:;
+	margin-top:10px;
+}
+.bxr{
+	font-size:45px;
+	color:gray;
+}
+.incorp h2{
+	padding-top:10px;
+}
+.incorp p{
+	color: #707B7C ;
+	font-family:arial;
+	font-size:15px;
 }
 .ulla{
-	height:20vh;
-	width:200px;
-	background-color:blue;
-	margin-left:140px;
-	margin-top:40px;
-
+	height:25vh;
+	width:300px;
+	background-color:white;
+	margin-left:20px;
+	margin-top:10px;
+}
+.inulla h2{
+   padding-top:10px;
+}.inulla p{
+	color: #707B7C ;
+	font-family:arial;
+	font-size:15px;
+}
+.bxc{
+	font-size:45px;
+	color:gray;
 }
 .secondfooter{
-	height:15vh;
-	background-color:pink;
+	height:20vh;
+	background-color: #F8F9F9;
 }
 .sffn{
 	padding-top:20px;
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
 }
 .shf1{
-	height:10vh;
-	width:100px;
-	background-color:brown;
+	height:8vh;
+	width:auto;
 	margin-left:70px;
 	margin-right:130px;
+	text-align:center;
+	font-size:40px;
+}
+.shf1 span{
+	font-size:15px;
+	padding-top:10px;
+	line-height:10px;
+   
 }
 .thheader{
-	height:15vh;
-	background-color:red;
-	padding-top:20px;
+	height:20vh;
+	background-color:;
+	padding-top:10px;
+	text-align:center;
+}
+.thheader{
+	font-family:arial;
+	font-size:13px;
 }
 .services{
-	margin-top:10px;
+	margin-top:;
 	height:7vh;
 	background-color:white;
+	text-align:center;
+	padding:10px;
+}
+.sbutton{
+	margin-bottom:10px;
+	width:60px;
+	border:1.5px solid yellow;
+	font-weight:bold;
 }
 .thirdsection{
-	height:80vh;
+	height:100vh;
 	background-color:pink;
-	padding-top:30px;
 	display:flex;
 }
 .holsixbox1{
-	height:35vh;
+	height:45vh;
 	background-color:yellow;
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
+	text-align:center;
 }
 .hsb1{
-	height:30vh;
-	width:200px;
-	background-color:red;
-	margin-top:20px;
-	margin-left:80px;
-	margin-right:90px;
+	height:43vh;
+	width:30%;
+	background-color:gray;
+	margin-top:px;
+	margin-left:10px;
+	margin-right:10px;
+	margin-top:5px;
+	text-align:center;
+}
+.bid{
+	font-size:30px;
+}
+.bif{
+	font-size:30px;
+}
+.bit{
+	font-size:30px;
 }
 .holsixbox2{
-	height:35vh;
+	height:45vh;
 	background-color:gray;
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
 	padding-top:10px;
+	text-align:center;
 }
 .hsb2{
-	height:30vh;
-	width:200px;
+	height:43vh;
+	width:30%;
 	background-color:red;
-	margin-left:80px;
-	margin-right:90px;
+	margin-left:10px;
+	margin-right:10px;
+}
+.bil{
+	font-size:30px;
+}
+.bis{
+	font-size:30px;
+}
+.bia{
+	font-size:30px;
 }
 .fsh{
 	height:15vh;
