--- a/baker/baker.css
+++ b/baker/baker.css
@@ -353,23 +353,35 @@
 
 }
 .hsb1{
-	height:30vh;
+	height:35vh;
 	width:30%;
 	background-color:white;
 	margin-left:10px;
 	margin-right:10px;
-	margin-top:30px;
+	margin-top:10px;
 	padding-top:30px;
 	line-height:30px;
 }
 .bid{
-	font-size:30px;
+	font-size:40px;
+	color: #5DADE2;
+	border-radius:50%;
+	border:10px solid #D5DBDB;
+	background-color:#D5DBDB;
 }
 .bif{
-	font-size:30px;
+	font-size:40px;
+	color: #EC7063 ;
+	border-radius:50%;
+	border:10px solid #D5DBDB;
+	background-color:#D5DBDB;
 }
 .bit{
-	font-size:30px;
+	font-size:40px;
+	color: #e80368;
+	border-radius:50%;
+	border:10px solid #D5DBDB;
+	background-color:#D5DBDB;
 }
 .holsixbox2{
 	height:40vh;
@@ -378,25 +390,38 @@
 	justify-content:space-around;
 	padding-top:30px;
 	text-align:center;
+	
 }
 .hsb2{
-	height:30vh;
+	height:35vh;
 	width:30%;
-	background-color:aqua;
+	background-color: white;
 	margin-left:10px;
 	margin-right:10px;
 	padding-top:30px;
 	line-height:30px;
-	
+
 }
 .bil{
-	font-size:30px;
+	font-size:40px;
+	color: #F39C12 ;
+	border-radius:50%;
+	border:10px solid #D5DBDB;
+	background-color:#D5DBDB;
 }
 .bis{
-	font-size:30px;
+	font-size:40px;
+	color: #F0190F ;
+	border-radius:50%;
+	border:10px solid #D5DBDB;
+	background-color:#D5DBDB;
 }
 .bia{
-	font-size:30px;
+	font-size:40px;
+	color: #15EBD8 ;
+	border-radius:50%;
+	border:10px solid #D5DBDB;
+	background-color:#D5DBDB;
 }
 .fsh{
 	background-color: #394959 ;
@@ -434,7 +459,7 @@
 }
 .fourthsection{
 	height:80vh;
-	background-color:pink;
+	background-color:white;
 
 }
 .fosh{
@@ -458,11 +483,11 @@
 	margin-top:1vh;
 	padding-bottom:2vh;
 	font-family:arial;
-	
+	color: #34495E ;
 }
 .htbox{
-	height:60vh;
-	background-color:yellow;
+	height:70vh;
+	background-color: white;
 	display:flex;
 	justify-content:space-around;
 }
@@ -470,11 +495,39 @@
 	height:40vh;
 	width:350px;
 	background-color:white;
-	margin-top:80px;
-	
+	margin-top:20px;
+}
+.trbox p{
+	height:30vh;
+	background-color: #ECF0F1 ;
+	font-style:italic;
+	line-height:25px;
+	font-family:arial;
+}
+.qs1{
+	font-size:30px;
+	color: #F5B041;
+}
+.trimg{
+	border-radius:50%;
+	width:20%; 
+	border: 5px solid white;
+	margin-top:-40px;
+	margin-left:20px;
+}
+.trbox h3{
+	margin-left:20px;
+	font-family:arial;
+	font-size:20px;
+}
+.trbox h4{
+	margin-left:20px;
+	font-family:arial;
+	font-size:15px;
+	color:gray;
 }
 .fivethsection{
-	background-color:gray;
+	background-color:white;
 }
 .pofo{
 	text-align:center;
@@ -485,74 +538,111 @@
 	font-size:30px;
 	padding-top:6vh;
 }
+.pobu{
+	margin-bottom:10px;
+	width:75px;
+	border:2px solid yellow;
+}
 .pofo p{
 	margin-top:3vh;
+	font-family:sans-serif;
+	font-size:15px;
+	color: #34495E ;
 }
-.ipofo4{
-	
+.pofo4{
+	text-align:center;
+	margin-top:4vh;
+	padding-bottom:3vh;
+	justify-content:space-around;
+}
+.bu4{
+	height:5vh;
+	width:5%;
+	border-radius:25px;
+	border-color:transparent;
+}
+.bu4:hover{
+	background-color:orange;
+	transition:all ease 0.8s;
 }
 .sixthsection{
-	height:120vh;
-	background-color:green;
-	padding-top:30px;
+	height:110vh;
+	background-color:white;
+	padding-top:10px;
 	display:flex;
 }
 .nihbox1{
 	height:35vh;
-	background-color:yellow;
+	background-color:white;
 	display:flex;
-	justify-content:space-between;
-}
-.nhbo{
-	display:flex;
+	justify-content:space-around;
 }
 .nbox1{
-	height:30vh;
+	height:33vh;
 	width:400px;
 	background-color:aqua;
-	margin-top:20px;
-	margin-left:60px;
-	margin-right:90px;
+	margin-top:5px;
+	margin-left:30px;
+	margin-right:30px;
 	display:flex;
+}
+.izg{
+	width:350px;
+	height:33vh;
 }
 .nihbox2{
 	height:35vh;
-	background-color:white;
+	background-color: white;
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
 }
 .nbox2{
-	height:30vh;
+	height:33vh;
 	width:400px;
 	background-color:aqua;
-	margin-top:20px;
-	margin-left:60px;
-	margin-right:90px;
+	margin-top:5px;
+	margin-left:30px;
+	margin-right:30px;
+	display:flex;
 }
 .nihbox3{
 	height:35vh;
-	background-color:yellow;
+	background-color: white;
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
 }
 .nbox3{
-	height:30vh;
+	height:33vh;
 	width:400px;
 	background-color:aqua;
-	margin-top:20px;
-	margin-left:60px;
-	margin-right:90px;
+	margin-top:5px;
+	margin-left:30px;
+	margin-right:30px;
+	display:flex;
 }
 .savanthsection{
 	height:85vh;
 	background-color:pink;
-
 }
 .hteam{
-	height:20vh;
-	width:100%;
-	background-color:blue;
-	padding-top:10px;
+	text-align:center;
+	background-color: #F7F9F9;
+}
+.hteam h1{
+	font-family:sans-serif;
+	font-size:30px;
+	padding-top:6vh;
+	margin-bottom:1vh;
+}
+.hteam p{
+	font-family:arial;
+	margin-top:2vh;
+	color: #5D6D7E;
+}
+.tdl{
+	width:75px;
+	border:2px solid yellow;
+	margin-left:47%;
 }
 .ihteam{
 	height:10vh;
@@ -565,13 +655,19 @@
 	height:60vh;
 	background-color:gray;
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
 }
 .itrbox{
-	height:40vh;
-	width:350px;
+	height:53vh;
+	width:290px;
 	background-color:white;
-	margin-top:80px;
+	margin-top:30px;
+	margin-right:5px;
+	margin-left:5px;
+}
+.t4i{
+	width:290px;
+	height:40vh;
 }
 .eithsection{
 	height:20vh;
