--- a/baker/baker.css
+++ b/baker/baker.css
@@ -622,11 +622,11 @@
 }
 .savanthsection{
 	height:85vh;
-	background-color:pink;
+	background-color: #F4F6F7;
 }
 .hteam{
 	text-align:center;
-	background-color: #F7F9F9;
+	background-color: #F4F6F7;
 }
 .hteam h1{
 	font-family:sans-serif;
@@ -653,7 +653,7 @@
 }
 .htrbox{
 	height:60vh;
-	background-color:gray;
+	background-color: #F4F6F7;
 	display:flex;
 	justify-content:space-around;
 }
@@ -664,42 +664,114 @@
 	margin-top:30px;
 	margin-right:5px;
 	margin-left:5px;
+	text-align:center;
+	line-height:20px;
+	border-radius:5px;
+}
+.itrbox h2{
+	margin-top:20px;
+	font-size:18px;
+	font-family:sans-serif;
+}
+.itrbox h3{
+	font-size:12px;
+	font-family:arial;
+	color: #808B96 ;
 }
 .t4i{
 	width:290px;
 	height:40vh;
+	border-top-left-radius:5px;
+	border-top-right-radius:5px;
 }
 .eithsection{
-	height:20vh;
-	background-color:red;
-	padding-top:20px;
+	background-color: white;
 }
 .pric{
-	margin-top:10px;
-	height:7vh;
-	background-color:white;
-	padding-top:30px;
+	text-align:center;
+	padding-top:5vh;
 }
-.ipric{
-	margin-top:10px;
-	height:5vh;
-	background-color:blue;
+.pld{
+	width:50px;
+	border:2px solid yellow;
+	margin-left:48%;
+	margin-top:2vh;
+}
+.pric h1{
+	font-family:sans-serif;
+	font-size:30px;
+}
+.pric p{
+	margin-top:3vh;
+	font-family:sans-serif;
+	font-size:15px;
+	color: #34495E ;
 }
 .ehsection{
-	height:60vh;
 	background-color:gray;
 }
 .fohbox{
-	height:60vh;
+	height:70vh;
 	background-color:gray;
 	display:flex;
-	justify-content:space-between;
+	justify-content:space-around;
 }
 .ifobox{
-	height:40vh;
+	height:63vh;
 	width:280px;
 	background-color:white;
-	margin-top:80px;
+	margin-top:30px;
+	text-align:center;
+	border-radius:5px;
+	padding:1.5px;
+}
+.ifobox h3{
+	height:6vh;
+	width:280px;
+	background-color: #F4F6F7;
+	padding-top:20px;
+	font-family:arial;
+	color: #5D6D7E;
+	font-weight:normal;
+	font-size:17px;
+}
+.ifobox h4{
+	font-family:sans-serif;
+	margin-top:2vh;
+	color: #FFBF00 ;
+	font-size:40px;
+}
+.ifobox sup{
+	color: #FFBF00 ;
+	letter-spacing:3px;
+	font-size:20px;
+	padding:4px;
+}
+.ifobox span{
+	font-size:18px;
+	font-weight:normal;
+	color: #D5D8DC;
+}
+.ifobox ul{
+	list-style-type:none;
+	line-height:40px;
+	font-family:sans-serif;
+}
+.del{
+	color: #D5D8DC;
+}
+.buybu{
+	margin-top:5.8vh;
+	height:11vh;
+	background-color: #F4F6F7;
+}
+.buy{
+	margin-top:2.5vh;
+	height:6vh;
+	width:45%;
+	border-radius:5px;
+	border-color: gray;
+	color: #5D6D7E;
 }
 .nithsection{
 	height:80vh;
