--- a/restaurantly/style.css
+++ b/restaurantly/style.css
@@ -8,33 +8,55 @@
 }
 header{
 	background-color: black;
+	width: 100%;
 }
 .firstsection{
 	height: 100vh;
-	background-color: silver;
 	background-image: url(image/hero-bg.jpg);
 	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	z-index: 0;
+}
+.firstsection::after{
+	content:"";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	opacity: 0.8;
+	background-color: rgba(0,0,0,0.6) ;
+	z-index: -1;
 }
 .head1{
 	display: flex;
 	width: 100%;
 	justify-content: space-between;
-	allign-item: center;
-	padding:  10px;
+	align-items: center;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 	font-family: sans-serif;
 	font-size: 0.9rem;
-	background-color: aqua;
+	background-color: transparent;
+	color: white;
+	align-items: center;
 }
 .number{
 	display: flex;
-	width: 70%;
-	justify-content: space between;
+	width: 29%;
+	justify-content: space-between;
+	text-align:center;
+
 }
-.number .time{
-	padding-left: 15px;
+.number p{
+	align-items: center;
+}
+.time{
+	
 }
 .nuside p{
-	padding-right: 25px;
+	
 }
 .nuside span{
 	color: orange;
@@ -46,24 +68,25 @@ header{
 .head2{
 	display: flex;
 	width: 100%;
-	padding: 1.3rem 0.6rem;
+	padding: 1.2rem 0rem;
 	font-family: sans-serif;
 	color: white;
-	allign-item: center;
+	align-items: center;
 }
 .title{
-	width: 20%;
+	width: 22%;
+	font-size: 1.1rem;
 }
 .navbar{
-	width: 80%;
-	allign-item: center;
-	padding-top: 4px;
+	width: 78%;
 	font-size: 0.9rem;
 }
 .navbar ul{
 	display: flex;
+	align-items: center;
 	justify-content: space-around;
 	list-style: none;
+	text-align: center;
 }
 .navbar a{
 	text-decoration: none;
@@ -75,11 +98,17 @@ header{
 }
 .bookbut{
 	color: white;
-	border: 2px solid orange;
+	border: 1px solid orange;
 	background-color: transparent;
-	border-radius: 5px;
+	border-radius: 20px;
 	font-family: sans-serif;
 	font-size: 0.9rem;
+	align-content: center;
+	padding: 0.6rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	letter-spacing: 1px;
+	
 }
 .bookbut:hover{
 	color: white;
@@ -108,9 +137,9 @@ header{
 	color: white;
 	border: 1px solid orange;
 	border-radius: 4rem;
-	padding: 10px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding: 0.6rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
 	letter-spacing: 1px;
 	font-weight: bold;
 }
@@ -125,9 +154,9 @@ header{
 	color: white;
 	border: 1px solid orange;
 	border-radius: 4rem;
-	padding: 10px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding: 0.6rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
 	letter-spacing: 1px;
 	font-weight: bold;
 	margin-top: 1.5rem;
@@ -142,6 +171,20 @@ header{
 .aboutsection{
 	background-image: url(image/about-bg.jpg);
 	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	z-index: 0;
+}
+.abooutsection::after{
+	content:"";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	opacity: 0.7;
+	background-color: rgba(0,0,0,0.9);
+	z-index: -1;
 }
 .aboutbox{
 	width: 100%;
@@ -153,6 +196,9 @@ header{
 	color: white;
 	padding-right: 0.5rem;
 	font-family: sans-serif;
+}
+.abouut1 ul li{
+	align-items: center;
 }
 .about1 h2{
 	font-family: none;
@@ -190,14 +236,55 @@ header{
 	width: 100%;
 	border: 0.3rem solid  #F7FBFC  ;
 }
-
-
-
-
-
-
-
-
+.thirdsection{
+	background-color: black;
+}
+.whyus{
+	padding-top: 3.5rem;
+}
+.whyus p{
+	font-family: sans-serif;
+	line-height: 4vh;
+	color: #CCD1D1;
+}
+.whyus h1{
+	font-size: 2.5rem;
+	font-weight: bold;
+	color: #F1953A;
+}
+.no123box{
+	margin-top: 6vh;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	padding-bottom: 4rem;
+}
+.no123{
+	width: 31%;
+	color: white;
+	background-color: #0E0D0D ; 
+}
+.no123 h1{
+	color: #F1953A;
+	font-family: sans-serif;
+	font-size: 2rem;
+	padding-top: 3rem;
+	padding-left: 1.8rem;
+}
+.no123 h2{
+	font-size: 1.8rem;
+	padding-top: 1.5rem;
+	padding-left: 1.8rem;
+}
+.no123 p{
+	font-family: sans-serif;
+	font-size: 1rem;
+	padding-top: 1.5rem;
+	padding-left: 1.8rem;
+	padding-right: 2rem;
+	line-height: 1.5rem;
+	padding-bottom: 3rem;
+}
 
 
 
