--- a/resume/style.css
+++ b/resume/style.css
@@ -2,3 +2,84 @@
 	margin: 0;
 	padding: 0;
 }
+.container{
+	margin: 20px 30px;
+	width: ;
+	font-family: sans-serif;
+}
+header{
+	text-align: center;
+}
+header h1{
+	font-size: 25px;
+	line-height: 2.5rem;
+}
+header h3{
+	font-size: 14px;
+	line-height: 2rem;
+	color: blue;
+}
+header p{
+	font-size: 11px;
+}
+/*768*/
+@media(min-width:768px){
+	
+.container{
+	margin: 20px 60px;
+	width:;
+	font-family: sans-serif;
+}
+header{
+	text-align: center;
+}
+header h1{
+	font-size: 25px;
+	line-height: 3rem;
+}
+header h3{
+	font-size: 15px;
+	line-height: 2rem;
+	color: blue;
+}
+header p{
+	font-size: 13px;
+	line-height: 2rem
+}
+}
+/*1024*/
+@media(min-width:1024px){
+	
+.container{
+	margin: 30px 80px;
+	width:;
+	font-family: sans-serif;
+}
+header{
+	text-align: center;
+}
+header h1{
+	font-size: 35px;
+	line-height: 3rem;
+}
+header h3{
+	font-size: 18px;
+	line-height: 3rem;
+	color: blue;
+}
+header p{
+	font-size: 18px;
+	line-height: 2rem;
+}
+}
+/*end header*/
+
+
+
+
+
+
+
+
+
+
